Edited wiki page Screenshots through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -3,7 +3,7 @@
 
 =Screenshots=
 
-*Please note that these screenshots are from July 2011 and do not represent the current state of the application.*
+*Screenshot date: 2012-02-03*
 
 || Main Activity, showing the list of drugs: || Clicking on a drug's name enables the user to edit it: ||
 || [http://rxdroid.googlecode.com/files/list.png] || [http://rxdroid.googlecode.com/files/create.png] ||
