--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -2,7 +2,7 @@
 
 =Screenshots=
 
-*THESE SCREENSHOTS ARE OUTDATED AND DO NOT REPRESENT THE CURRENT STATE OF DEVELOPMENT. NEW ONES WILL BE UPLOADED AS SOON AS I FIND THE TIME TO DO SO.*
+*Screenshot date: 2012-11-04*
 
 || Main Activity, showing the list of drugs: || Editing a drug: ||
 || [http://rxdroid.googlecode.com/svn/img/overview.png] || [http://rxdroid.googlecode.com/svn/img/editing.png] ||
