--- a/branches/actionbarsherlock/res/values-de/strings.xml
+++ b/branches/actionbarsherlock/res/values-de/strings.xml
@@ -309,8 +309,7 @@
 	
 	<string name="_title_disabled">Deaktiviert</string>
 	
-	<string name="_msg_no_drugs_no_ab">MENÜ drücken und »%1$s« auswählen, um ein Medikament hinzuzufügen</string>
-	<string name="_msg_no_drugs_compact_ab">»%1$s« aus dem Drei-Punkte-Menü in der Aktionsleiste auswählen, um ein Medikament hinzuzufügen</string>
+	<string name="_msg_no_drugs_compact_ab">»%1$s« aus dem Menü auswählen, um ein Medikament hinzuzufügen</string>
 	<string name="_msg_no_drugs_extended_ab">Den »+« Button in der Aktionsleiste klicken, um ein Medikament hinzuzufügen</string>
 	
 	<string name="_summary_smart_sort">Medikamente nach ihrer Wichtigkeit ordnen</string>
