--- a/branches/actionbarsherlock/res/values-it/strings.xml
+++ b/branches/actionbarsherlock/res/values-it/strings.xml
@@ -319,9 +319,8 @@
 	
 	<string name="_title_disabled">Disattivato</string>	
 	
-    <string name="_msg_no_drugs_no_ab">Premi MENU e seleziona \"%1$s\" per aggiungere un medicinale</string>
-    <string name="_msg_no_drugs_compact_ab">Seleziona \"%1$s\" dal menu con tre puntini per aggiungere un medicinale</string>
-    <string name="_msg_no_drugs_extended_ab">Premi il bottone \"+\"" nella barra per aggiungere un medicinale</string>
+    <string name="_msg_no_drugs_compact_ab">Seleziona \"%1$s\" dal menu per aggiungere un medicinale</string>
+    <string name="_msg_no_drugs_extended_ab">Premi il bottone \"+\" nella barra per aggiungere un medicinale</string>
     
     <string name="_summary_smart_sort">Seleziona medicinali per importanza</string>
 	<string name="_title_smart_sort">Ordinamento automatico</string>
