--- a/branches/actionbarsherlock/res/values-de/strings.xml
+++ b/branches/actionbarsherlock/res/values-de/strings.xml
@@ -340,6 +340,11 @@
 	    
 	<string name="_msg_no_history_data">Keine Verlaufsdaten für die ausgewählten Kriterien vorhanden.</string>
 	
+	
+	<string name="_title_skip_dose_dialog">Dialog überspringen</string>
+	<string name="_summary_skip_dose_dialog">Überspringe den Dialog nach Anklicken einer Dosis. Um ihn
+	    zu öffnen Dosis lange anklicken und »Dosis einnehmen« auswählen.</string>
+	    
 	<!-- 
     An exception to the rules laid out above. These strings are used by com.quietlycoding.android.picker
     and thus use a different naming scheme.
